--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -12,11 +12,9 @@
 
 {% block principal %}
     <section xmlns="http://www.w3.org/1999/html">
+        <h1>SuperMarket</h1>
+        <h3>Uma nova experiência em pesquisa de produtos de supermercados</h3>
         <br><br><br>
-        <br><br><br>
-        {% load static %}
-        <img class="img-responsive" src="{% static 'img/logo_top.png' %}" alt="IFRoO">
-
-
+        <img class="img-responsive" src="/media/img/logo_top.png" alt="IFRoO">
     </section>
 {% endblock %}
