--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -15,6 +15,6 @@
         <h1>SuperMarket</h1>
         <h3>Uma nova experiência em pesquisa de produtos de supermercados</h3>
         <br><br><br>
-        <img class="img-responsive" src="/media/img/logo_top.png" alt="IFRoO">
+        <img class="img-responsive" src="/media/img/logo_top.png" alt="SuperMarket">
     </section>
 {% endblock %}
