--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -88,26 +88,26 @@
 
 <div class="container-fluid text-center">
     <div class="row content">
-        <div class="col-sm-2 sidenav" align="left">
-            <div class="panel panel-success">
-                <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Menu</div>
-                <div class="panel-body">
-                    <p><a href="{% url 'supermarket.home' %}"><span class="glyphicon glyphicon-home"></span>
-                        Home</a></p>
-                    <p><a href="{% url 'supermarket.promocoes' %}"><span
-                            class="glyphicon glyphicon-shopping-cart"></span>
-                        Promoções</a></p>
-                    <p><a href="{% url 'supermarket.sobre' %}"><span class="glyphicon glyphicon-question-sign"></span>
-                        Sobre</a></p>
-                     <p><a href="{% url 'supermarket.contato' %}"><span class="glyphicon glyphicon-envelope"></span>
-                        Contato</a></p>
-                </div>
-            </div>
-
-            {% block menu_lateral_esquerdo %}{% endblock %}
-
-        </div>
-        <div class="col-sm-8 text-left">
+{#        <div class="col-sm-2 sidenav" align="left">#}
+{#            <div class="panel panel-success">#}
+{#                <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Menu</div>#}
+{#                <div class="panel-body">#}
+{#                    <p><a href="{% url 'supermarket.home' %}"><span class="glyphicon glyphicon-home"></span>#}
+{#                        Home</a></p>#}
+{#                    <p><a href="{% url 'supermarket.promocoes' %}"><span#}
+{#                            class="glyphicon glyphicon-shopping-cart"></span>#}
+{#                        Promoções</a></p>#}
+{#                    <p><a href="{% url 'supermarket.sobre' %}"><span class="glyphicon glyphicon-question-sign"></span>#}
+{#                        Sobre</a></p>#}
+{#                     <p><a href="{% url 'supermarket.contato' %}"><span class="glyphicon glyphicon-envelope"></span>#}
+{#                        Contato</a></p>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{#            {% block menu_lateral_esquerdo %}{% endblock %}#}
+{##}
+{#        </div>#}
+        <div class="col-sm-10 text-justify">
 
             {% block principal %} {% endblock %}
 
