--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -169,23 +169,11 @@
 
             });
         </script>
-        <table>
-            <tbody>
-            <tr>
-                {% for title_produto in produto_descricao %}
-                    <td style="vertical-align:middle" width="200" height="220">
-                        <img src="{{ title_produto.imagem.url }}" width="200" height="200">
-                    </td>
-                    <td style="vertical-align:middle">{{ title_produto.descricao }}<br>
-                        {{ title_produto.marca }} -
-                        {{ title_produto.unidade_de_medida }}</td>
-                {% endfor %}
-            </tr>
-            </tbody>
-        </table>
-        <table class="table table-striped">
+        <table class="table table-responsive table-striped">
             <thead>
             <tr>
+                <th></th>
+                <th>Descrição</th>
                 <th>Estabelecimento</th>
                 <th>Valor</th>
                 <th>Válido até</th>
