--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -66,7 +66,8 @@
                 <span class="icon-bar"></span>
             </button>
             {# carrega diretório da imagem #}
-            <a class="navbar-brand"><img src="/media/img/logo.png" class="img-rounded" alt="" width="45" height="30"></a>
+            {% load static %}
+            <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" class="img-rounded" alt="" width="45" height="30"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
