--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -16,6 +16,6 @@
         <h3>Uma nova experiência em pesquisa de produtos de supermercados</h3>
         <br><br><br>
         {% load static %}
-        <img class="img-responsive" src=" {% static '/img/logo.png' %}" alt="SuperMarket">
+        <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="SuperMarket">
     </section>
 {% endblock %}
