--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -169,6 +169,7 @@
 
             });
         </script>
+    <br><br>
         <table class="table table-responsive table-striped">
             <thead>
             <tr>
@@ -182,14 +183,13 @@
             <tbody>
             {% for produto in todos_produtos %}
                 <tr>
-                    <td style="vertical-align: middle">
-                        <img src="{{ produto.produto.imagem.url }}" width="100" height="100"></td>
-                    <td>{{ produto.produto.descricao }}<br>
-                        {{ produto.produto.marca }} -
-                        {{ produto.produto.unidade_de_medida }}</td>
-                    <td>{{ produto.cliente.nome_fantasia }}</td>
-                    <td>R$ {{ produto.valor }}</td>
-                    <td>{{ produto.data_fim }}</td>
+                    <td>
+                        <img src="{{ produto.produto.imagem.url }}" class="img-responsive" width="100" height="80"></td>
+                    <td style="vertical-align: middle">{{ produto.produto.descricao }}<br>
+                        {{ produto.produto.marca }}<br>{{ produto.produto.unidade_de_medida }}</td>
+                    <td style="vertical-align: middle">{{ produto.cliente.nome_fantasia }}</td>
+                    <td style="vertical-align: middle">R$ {{ produto.valor }}</td>
+                    <td style="vertical-align: middle">{{ produto.data_fim }}</td>
                 </tr>
             {% empty %}
                 <h2>Sem promoções no momento!</h2>
