--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -110,26 +110,29 @@
 {% block menu_lateral_direito %}
     <div class="panel panel-info">
         <div class="panel-heading"><span class="glyphicon glyphicon-filter"></span> Filtrar</div>
-        <div class="panel-body">{% for cliente in clientes %}
-            <p><a href="#">{{ cliente.nome_fantasia }}</a></p>
-        {% endfor %}
+        <div class="panel-body">
+            {% for cliente in clientes %}
+                <p><a href="{% url 'supermarket.filtro_promocao' cliente.id %}">{{ cliente.nome_fantasia }}</a></p>
+            {% endfor %}
+            <hr>
+            <p><a href="{% url 'supermarket.promocoes' %}">Todas promoções</a></p>
         </div>
     </div>
 
-    <div class="panel panel-info">
-        <div class="panel-heading"><span class="glyphicon glyphicon-sort"></span> Organizar</div>
-        <div class="panel-body">
-            <p><a href="#">Maior preço</a></p>
-            <p><a href="#">Menor preço</a></p>
-        </div>
-    </div>
-
-    <div class="panel panel-success">
-        <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Ações</div>
-        <div class="panel-body">
-            <p><a href="{% url 'supermarket.nova_promocao' %}">Inserir</a></p>
-        </div>
-    </div>
+    {#    <div class="panel panel-info">#}
+    {#        <div class="panel-heading"><span class="glyphicon glyphicon-sort"></span> Organizar</div>#}
+    {#        <div class="panel-body">#}
+    {#            <p><a href="#">Maior preço</a></p>#}
+    {#            <p><a href="#">Menor preço</a></p>#}
+    {#        </div>#}
+    {#    </div>#}
+    {##}
+    {#    <div class="panel panel-success">#}
+    {#        <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Ações</div>#}
+    {#        <div class="panel-body">#}
+    {#            <p><a href="{% url 'supermarket.nova_promocao' %}">Inserir</a></p>#}
+    {#        </div>#}
+    {#    </div>#}
 
 {% endblock %}
 
@@ -169,7 +172,7 @@
 
             });
         </script>
-    <br><br>
+        <br><br>
         <table class="table table-responsive table-striped">
             <thead>
             <tr>
