--- a/supermarket/templates/supermarket/promocoes_por_produto.html
+++ b/supermarket/templates/supermarket/promocoes_por_produto.html
@@ -7,39 +7,39 @@
 {% endblock %}
 
 {% block menu_lateral_direito %}
-    <div class="panel panel-info">
-        <div class="panel-heading"><span class="glyphicon glyphicon-filter"></span> Filtrar</div>
-        <div class="panel-body">{% for cliente in clientes %}
-            <p><a href="#">{{ cliente.nome_fantasia }}</a></p>
-        {% endfor %}
-        </div>
-    </div>
-
-    <div class="panel panel-info">
-        <div class="panel-heading"><span class="glyphicon glyphicon-sort"></span> Organizar</div>
-        <div class="panel-body">
-            <p><a href="#">Maior preço</a></p>
-            <p><a href="#">Menor preço</a></p>
-        </div>
-    </div>
-
-    <div class="panel panel-success">
-        <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Ações</div>
-        <div class="panel-body">
-            <p><a href="{% url 'supermarket.nova_promocao' %}">Inserir</a></p>
-        </div>
-    </div>
+{#    <div class="panel panel-info">#}
+{#        <div class="panel-heading"><span class="glyphicon glyphicon-filter"></span> Filtrar</div>#}
+{#        <div class="panel-body">{% for cliente in clientes %}#}
+{#            <p><a href="#">{{ cliente.nome_fantasia }}</a></p>#}
+{#        {% endfor %}#}
+{#        </div>#}
+{#    </div>#}
+{#{% for title_produto in produto_descricao %}#}
+{#    <div class="panel panel-info">#}
+{#        <div class="panel-heading"><span class="glyphicon glyphicon-sort"></span> Organizar</div>#}
+{#        <div class="panel-body">#}
+{#            <p><a href="#">Maior preço</a></p>#}
+{#            <p><a href="#">Menor preço</a></p>#}
+{#        </div>#}
+{#    </div>#}
+{#{% endfor %}#}
+{#    <div class="panel panel-success">#}
+{#        <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Ações</div>#}
+{#        <div class="panel-body">#}
+{#            <p><a href="{% url 'supermarket.nova_promocao' %}">Inserir</a></p>#}
+{#        </div>#}
+{#    </div>#}
 
 {% endblock %}
 
 {% block principal %}
     <section xmlns="http://www.w3.org/1999/html">
-        <table>
+        <table class="table table-responsive">
             <tbody>
             <tr>
                 {% for title_produto in produto_descricao %}
                     <td style="vertical-align:middle" width="200" height="220">
-                        <img src="{{ title_produto.imagem.url }}" width="200" height="200">
+                        <img class="img-responsive" src="{{ title_produto.imagem.url }}" width="200" height="200">
                     </td>
                     <td style="vertical-align:middle">{{ title_produto.descricao }}<br>
                         {{ title_produto.marca }} -
@@ -48,8 +48,7 @@
             </tr>
             </tbody>
         </table>
-        {% for produto in todos_produtos %}
-            <table class="table table-striped">
+            <table class="table table-responsive table-striped">
             <thead>
             <tr>
                 <th>Estabelecimento</th>
@@ -57,8 +56,6 @@
                 <th>Válido até</th>
             </tr>
             </thead>
-        {% empty %}
-        {% endfor %}
         <tbody>
         {% for produto in todos_produtos %}
             <tr>
