--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -2,6 +2,26 @@
 
 {% block titulo %} SuperMarket - Contato {% endblock %}
 
+{% block style %}
+
+    h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+    }
+
+    h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+    }
+
+{% endblock %}
+
 {% block menu_lateral_esquerdo %}
 
 {% endblock %}
@@ -13,19 +33,37 @@
 {% block principal %}
     <section xmlns="http://www.w3.org/1999/html">
         <br>
-        <div class="panel-group">
-            <div class="panel panel-success">
-                <div class="panel-heading">Thiago José Sampaio Kaiser</div>
-                <div class="panel-body">thiago.kaiser@ifro.edu.br<br>(69) 98488-8660</div>
-            </div>
-            <div class="panel panel-success">
-                <div class="panel-heading">Juliano Cristhian Silva</div>
-                <div class="panel-body">juliano@ifro.edu.br<br>(69) 99222-5284</div>
-            </div>
-            <div class="panel panel-success">
-                <div class="panel-heading">Saiane de Barros Souza</div>
-                <div class="panel-body">saiane.souza@ifro.edu.br<br>(69) 98465-3135</div>
+        <div id="about" class="container-fluid">
+            <div class="row">
+                <div class="col-sm-8">
+                    <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> <a
+                            href="mailto:thiago.kaiser@ifro.edu.br?Subject=Contato SuperMarket" target="_top">thiago.kaiser@ifro.edu.br</a>
+                    </p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> <a
+                            href="mailto:juliano@ifro.edu.br?Subject=Contato SuperMarket" target="_top">juliano@ifro.edu.br</a>
+                    </p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> <a
+                            href="mailto:saiane.souza@ifro.edu.br?Subject=Contato SuperMarket" target="_top">saiane.souza@ifro.edu.br</a>
+                    </p>
+                </div>
             </div>
         </div>
+{#        <div class="panel panel-success">#}
+{#            <div class="panel-heading"><p>Entre em contato conosco.</p></div>#}
+{#            <div class="panel-body">#}
+{#                <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>#}
+{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
+{#                        href="mailto:thiago.kaiser@ifro.edu.br?Subject=Contato SuperMarket" target="_top">thiago.kaiser@ifro.edu.br</a>#}
+{#                </p>#}
+{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
+{#                        href="mailto:juliano@ifro.edu.br?Subject=Contato SuperMarket"#}
+{#                        target="_top">juliano@ifro.edu.br</a>#}
+{#                </p>#}
+{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
+{#                        href="mailto:saiane.souza@ifro.edu.br?Subject=Contato SuperMarket" target="_top">saiane.souza@ifro.edu.br</a>#}
+{#                </p>#}
+{#            </div>#}
+{#        </div>#}
     </section>
 {% endblock %}
