--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -108,7 +108,7 @@
 {% endblock %}
 
 {% block menu_lateral_direito %}
-    <div class="panel panel-info">
+    <div class="panel panel-success">
         <div class="panel-heading"><span class="glyphicon glyphicon-filter"></span> Filtrar</div>
         <div class="panel-body">
             {% for cliente in clientes %}
@@ -177,10 +177,10 @@
             <thead>
             <tr>
                 <th></th>
-                <th>Descrição</th>
-                <th>Estabelecimento</th>
-                <th>Valor</th>
-                <th>Válido até</th>
+                <th>DESCRIÇÃO</th>
+                <th>ESTABELECIMENTO</th>
+                <th>VALOR</th>
+                <th>VÁLIDO ATÉ</th>
             </tr>
             </thead>
             <tbody>
