--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-{% block head %} {% endblock %}
+    {% block head %} {% endblock %}
     <title>{% block titulo %}SuperMarket{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,21 +16,23 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         {% block style %} {% endblock %}
-        h2 {
-    font-size: 24px;
-    text-transform: uppercase;
-    color: #303030;
-    font-weight: 600;
-    margin-bottom: 30px;
-    }
 
-    h4 {
-    font-size: 19px;
-    line-height: 1.375em;
-    color: #303030;
-    font-weight: 400;
-    margin-bottom: 30px;
-    }
+        h2 {
+            font-size: 24px;
+            text-transform: uppercase;
+            color: #303030;
+            font-weight: 600;
+            margin-bottom: 30px;
+        }
+
+        h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            color: #303030;
+            font-weight: 400;
+            margin-bottom: 30px;
+        }
+
         /* Remove the navbar's default margin-bottom and rounded borders */
         .navbar {
             margin-bottom: 0;
@@ -82,7 +84,8 @@
             </button>
             {# carrega diretório da imagem #}
             {% load static %}
-            <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" class="img-rounded" alt="" width="45" height="30"></a>
+            <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" class="img-rounded" alt="" width="45"
+                                         height="30"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -96,40 +99,41 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'admin:login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>\
+                <li><a href="{% url 'admin:login' %}" target="_blank"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+            \
         </div>
     </div>
 </nav>
 
 <div class="container-fluid text-center">
     <div class="row content">
-{#        <div class="col-sm-2 sidenav" align="left">#}
-{#            <div class="panel panel-success">#}
-{#                <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Menu</div>#}
-{#                <div class="panel-body">#}
-{#                    <p><a href="{% url 'supermarket.home' %}"><span class="glyphicon glyphicon-home"></span>#}
-{#                        Home</a></p>#}
-{#                    <p><a href="{% url 'supermarket.promocoes' %}"><span#}
-{#                            class="glyphicon glyphicon-shopping-cart"></span>#}
-{#                        Promoções</a></p>#}
-{#                    <p><a href="{% url 'supermarket.sobre' %}"><span class="glyphicon glyphicon-question-sign"></span>#}
-{#                        Sobre</a></p>#}
-{#                     <p><a href="{% url 'supermarket.contato' %}"><span class="glyphicon glyphicon-envelope"></span>#}
-{#                        Contato</a></p>#}
-{#                </div>#}
-{#            </div>#}
-{##}
-{#            {% block menu_lateral_esquerdo %}{% endblock %}#}
-{##}
-{#        </div>#}
+        {#        <div class="col-sm-2 sidenav" align="left">#}
+        {#            <div class="panel panel-success">#}
+        {#                <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Menu</div>#}
+        {#                <div class="panel-body">#}
+        {#                    <p><a href="{% url 'supermarket.home' %}"><span class="glyphicon glyphicon-home"></span>#}
+        {#                        Home</a></p>#}
+        {#                    <p><a href="{% url 'supermarket.promocoes' %}"><span#}
+        {#                            class="glyphicon glyphicon-shopping-cart"></span>#}
+        {#                        Promoções</a></p>#}
+        {#                    <p><a href="{% url 'supermarket.sobre' %}"><span class="glyphicon glyphicon-question-sign"></span>#}
+        {#                        Sobre</a></p>#}
+        {#                     <p><a href="{% url 'supermarket.contato' %}"><span class="glyphicon glyphicon-envelope"></span>#}
+        {#                        Contato</a></p>#}
+        {#                </div>#}
+        {#            </div>#}
+        {##}
+        {#            {% block menu_lateral_esquerdo %}{% endblock %}#}
+        {##}
+        {#        </div>#}
         <div class="col-sm-10 text-justify">
 
             {% block principal %} {% endblock %}
 
         </div>
-        <div class="col-sm-2 sidenav" align="left">
-
+        <div class="col-sm-2" align="left">
+        <br>
             {% block menu_lateral_direito %}{% endblock %}
 
         </div>
