--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -11,39 +11,41 @@
 {% endblock %}
 
 {% block principal %}
-    <section xmlns="http://www.w3.org/1999/html">
-        <br>
-        <div id="about" class="container-fluid">
-            <div class="row">
-                <div class="col-sm-8">
-                    <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>
-                    <p><span class="glyphicon glyphicon-envelope"></span> <a
-                            href="mailto:thiago.kaiser@ifro.edu.br?Subject=Contato SuperMarket" target="_top">thiago.kaiser@ifro.edu.br</a>
-                    </p>
-                    <p><span class="glyphicon glyphicon-envelope"></span> <a
-                            href="mailto:juliano@ifro.edu.br?Subject=Contato SuperMarket" target="_top">juliano@ifro.edu.br</a>
-                    </p>
-                    <p><span class="glyphicon glyphicon-envelope"></span> <a
-                            href="mailto:saiane.souza@ifro.edu.br?Subject=Contato SuperMarket" target="_top">saiane.souza@ifro.edu.br</a>
-                    </p>
-                </div>
+    <div id="contact" class="container-fluid">
+        <h2 class="text-center"></h2>
+        <div class="row">
+            <div class="col-sm-5">
+                <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>
+                <p><span class="glyphicon glyphicon-envelope"></span> <a
+                        href="mailto:thiago.kaiser@ifro.edu.br?Subject=Contato SuperMarket" target="_top">thiago.kaiser@ifro.edu.br</a>
+                </p>
+                <p><span class="glyphicon glyphicon-envelope"></span> <a
+                        href="mailto:juliano@ifro.edu.br?Subject=Contato SuperMarket"
+                        target="_top">juliano@ifro.edu.br</a>
+                </p>
+                <p><span class="glyphicon glyphicon-envelope"></span> <a
+                        href="mailto:saiane.souza@ifro.edu.br?Subject=Contato SuperMarket" target="_top">saiane.souza@ifro.edu.br</a>
+                </p>
             </div>
-        </div>
-{#        <div class="panel panel-success">#}
-{#            <div class="panel-heading"><p>Entre em contato conosco.</p></div>#}
-{#            <div class="panel-body">#}
-{#                <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>#}
-{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
-{#                        href="mailto:thiago.kaiser@ifro.edu.br?Subject=Contato SuperMarket" target="_top">thiago.kaiser@ifro.edu.br</a>#}
-{#                </p>#}
-{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
-{#                        href="mailto:juliano@ifro.edu.br?Subject=Contato SuperMarket"#}
-{#                        target="_top">juliano@ifro.edu.br</a>#}
-{#                </p>#}
-{#                <p><span class="glyphicon glyphicon-envelope"></span> <a#}
-{#                        href="mailto:saiane.souza@ifro.edu.br?Subject=Contato SuperMarket" target="_top">saiane.souza@ifro.edu.br</a>#}
-{#                </p>#}
+{#            <div class="col-sm-7 slideanim">#}
+{#                <div class="row">#}
+{#                    <div class="col-sm-6 form-group">#}
+{#                        <input class="form-control" id="name" name="name" placeholder="Nome" type="text" required>#}
+{#                    </div>#}
+{#                    <div class="col-sm-6 form-group">#}
+{#                        <input class="form-control" id="email" name="email" placeholder="E-mail" type="email" required>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <textarea class="form-control" id="comments" name="comments" placeholder="Comentário"#}
+{#                          rows="5"></textarea><br>#}
+{#                <div class="row">#}
+{#                    <div class="col-sm-12 form-group">#}
+{#                        <button class="btn btn-default pull-right" type="submit">Enviar</button>#}
+{#                    </div>#}
+{#                </div>#}
 {#            </div>#}
-{#        </div>#}
-    </section>
+        </div>
+    </div>
+
+
 {% endblock %}
