--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -14,7 +14,7 @@
     <div id="about" class="container-fluid">
         <div class="row">
             <div class="col-sm-8">
-                <h2>SuperMarket</h2><br>
+                <h2 class="text-center">SuperMarket</h2>
                 <p>Uma nova experiência em pesquisa de produtos de supermercados</p>
                 <br>
             </div>
