width search ok

--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -176,10 +176,10 @@
             <thead>
             <tr>
                 <th></th>
-                <th>DESCRIÇÃO</th>
-                <th>ESTABELECIMENTO</th>
-                <th>VALOR</th>
-                <th>VÁLIDO ATÉ</th>
+                <th>Descrição</th>
+                <th>Estabelecimento</th>
+                <th>Valor</th>
+                <th>Válido até</th>
             </tr>
             </thead>
             <tbody>
