--- a/supermarket/templates/supermarket/teste2.html
+++ b/supermarket/templates/supermarket/teste2.html
@@ -720,7 +720,7 @@
     {#               autocomplete="off" autofocus/>#}
     {#    </div>#}
     <div class="myDIV">
-        <table class="table table-responsive table-striped table-hover">
+        <table class="table table-responsive table-striped">
             <thead>
             <tr>
                 <th></th>
@@ -732,7 +732,8 @@
             </thead>
             <tbody id="myTable">
             {% for produto in todos_produtos %}
-                <tr style='cursor:pointer'>
+                <tr class='clickable-row'
+                    data-href={% url 'supermarket.promocao_por_produto' produto.produto.id %} style="cursor:pointer">
                     <td>
                         <img src="{{ produto.produto.imagem.url }}" class="img-responsive" width="100" height="80"></td>
                     <td style="vertical-align: middle">{{ produto.produto.descricao }}<br>
@@ -755,6 +756,12 @@
             $("#myTable tr").filter(function () {
                 $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
             });
+        });
+    });
+
+    jQuery(document).ready(function ($) {
+        $(".clickable-row").click(function () {
+            window.location = $(this).data("href");
         });
     });
 </script>
