--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -257,7 +257,7 @@
                     <tr class='clickable-row'
                         data-href={% url 'supermarket.promocao_por_produto' produto.produto.id %} style="cursor:pointer">
                         <td>
-                            <img src="{{ produto.produto.imagem.url }}" class="img-responsive" width="100" height="80">
+                            <img src="{{ produto.produto.imagem.url }}" class="img-responsive" width="75">
                         </td>
                         <td style="vertical-align: middle">{{ produto.produto.descricao }}<br>
                             {{ produto.produto.marca }}<br>{{ produto.produto.unidade_de_medida }}</td>
