--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -127,16 +127,16 @@
         {#            {% block menu_lateral_esquerdo %}{% endblock %}#}
         {##}
         {#        </div>#}
-        <div class="col-sm-10 text-justify">
+        <div class="col-sm-12 text-justify">
 
             {% block principal %} {% endblock %}
 
         </div>
-        <div class="col-sm-2" align="left">
-        <br>
-            {% block menu_lateral_direito %}{% endblock %}
-
-        </div>
+{#        <div class="col-sm-2" align="left">#}
+{#        <br>#}
+{#            {% block menu_lateral_direito %}{% endblock %}#}
+{##}
+{#        </div>#}
     </div>
 </div>
 
