--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -241,7 +241,7 @@
         {#        <input class="form-control" type="search" id="myInput" placeholder="Busca por produtos..."#}
         {#               autocomplete="off" autofocus/>#}
         {#    </div>#}
-        <div style="overflow-x:auto">
+        <div>
             <table class="table table-responsive table-striped">
                 <thead>
                 <tr>
